# BlazingGoldbach

./: .gitignore  Cargo.toml  README.md  results.csv
.github/workflows/: ci.yml
docs/: goldbach_strategy_optimized_v3.md
src/: config.rs  construct.rs  lib.rs  main.rs  modulo.rs  primes.rs  sieve.rs  solver.rs
tools/: solve_bench.rs
